.\Ajout de la secu git push

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,13 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-# Docuementation Setup
+# Documentation Setup
 # swagger-ui custom path
 springdoc.swagger-ui.path=/docs
 
 file.upload-dir=uploads
 
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
+
+#logging.level.org.springframework=DEBUG
