--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,15 @@ spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
 
 #logging.level.org.springframework=DEBUG
+
+#___________________________________
+# Configuration de Java Mail Sender
+#------------------------------------
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=<login user to smtp server>
+#spring.mail.password=<login password to smtp server>
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
